--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Hello Front-End</title>
+    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <div class="bigContainer">
-      <div class="container"></div>
+      <div class="container">
+        <div class="legend">
+          <div class="title">
+            <h1 class="center">HAUNTED HOUSE</h1>
+            <h3 class="center">Do you dare to play??</h3>
+          </div>
+
+          <img src="./img/house1.png" />
+          <button>Enter to the house</button>
+        </div>
+      </div>
     </div>
-
-
-
+    <script src="data.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
